[package]
name = "rust_hero"
version = "0.0.1"
authors = ["Michael Auracher <michael.auracher@gmail.com>"]
build = "build.rs"

[dependencies.game]
path = "src"
features = ["internal"]

[dependencies]
libc = "*"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "*"
kernel32-sys = "*"

[features]
internal = []

[profile.dev]
opt-level = 0
debug = true
rpath = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.release]
opt-level = 2
debug = false
rpath = true
lto = true
debug-assertions = false
codegen-units = 0
