[package]
name = "rust_hero"
version = "0.0.1"
authors = ["Michael Auracher <michael.auracher@gmail.com>"]
build = "build.rs"

[dependencies.game]
path = "src"
features = ["internal"]

[dependencies]
libc = "*"
# clippy = "*"

[features]
internal = []

[profile.dev]
opt-level = 1
debug = true
rpath = true
debug-assertions = true

[profile.release]
opt-level = 2
debug = false
rpath = true
debug-assertions = false
