[package]
name = "game"
version = "0.0.1"
authors = ["Michael Auracher <michael.auracher@gmail.com>"]

[lib]
name = "game"
crate-type = ["dylib"]
path = "libgame.rs"

[dependencies]
num = "*"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
