[package]
name = "game"
version = "0.0.1"
authors = ["Michael Auracher <michael.auracher@gmail.com>"]

[lib]
name = "game"
crate-type = ["dylib"]
path = "libgame.rs"

[dependencies]
num = "*"
bitflags = "*"
# clippy = "*"

[features]
internal = []

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true

[profile.release]
opt-level = 2
debug = false
rpath = false
debug-assertions = false
